styles.css
html{
    --card-curvature: 8px;
    --spacing:1rem;
}

.roboto-regular {
    font-family: "Roboto", sans-serif;
    font-optical-sizing: auto;
    font-weight: normal;
    font-style: normal;
    font-variation-settings:
      "wdth" 100;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;;

}

body {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 5fr;
    height: 100vh;
}

p {
    font-weight: 400;
}
/* dashboard section */
.dashboard{
    grid-row: 1 / -1;
    display: flex;
    flex-direction: column;
    gap:1.5rem;
    background-color: #4590CE;
}

.option,
.logo {
    color:white;
    font-weight: 700;
    display: grid;
    align-items: center;
    grid-template-columns: 70px 1fr;
    margin-left: 8px;
}
.option{
    font-size: 0.75rem;
}

.option > img,
.logo > img{
    filter: invert(100%) sepia(0%) saturate(7425%) hue-rotate(42deg) brightness(93%) contrast(118%);
    height: auto;
    padding: 10px;
}
.option > img {
    width: 40px;
    justify-self: center;
}
.logo > img {
    width: 70px;
}

/* main section */
main{
    background-color: #e3e8ef;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
}

.headings {
    color: #2f2f2f;
    font-weight: 500;
    font-size: 1.25rem;
    margin: 1rem;
}

.window{
    background-color: white;
    border-radius: var(--card-curvature);
}

/* Projects section */
.projects-section{
    grid-row: 1 / -1;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 2rem repeat(3, 1fr);
    padding: 1rem;
}

.projects-section > .headings{
    grid-column: 1 / -1;
    margin-left: var(--spacing);
    align-self: center;
    position: relative;
    bottom: -0.5rem;
}

.projects-card{
    background: white;
    padding: 1rem;
    margin: var(--spacing);
    border-left: 10px #e7b74a solid;
    border-radius: var(--card-curvature);
    display: grid;
    grid-template-rows: 1fr 2.5rem;
}

.projects-card h4{
    font-size: 1.1rem;
    font-weight: 500;
    padding-bottom: 0.1rem;
}

.projects-card p {
    color: gray;
}

.projects-actions{
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 1.5rem;
    margin-right: 1rem;
}

.projects-actions > img {
    width: 1.25rem;
    height: auto;
    justify-self: end;
}


/* Announcements section */
.announcements-section{
    display: grid;
    grid-template-rows: 2rem 1fr;
}

.announcements.window {
    margin-top: 1rem;
    margin-right: calc(var(--spacing)*2);
    justify-self: center;
    display: grid;
    grid-template-rows: 1fr 1px 1fr 1px 1fr;
    align-items: center;
    padding: 0.5rem 1.5rem;
}

.announcements.window h6 {
    font-size: 0.85rem;
    font-weight: 500;
    color: black;
}

.announcements.window p{
    font-size: 0.75rem;
    color: gray;
}

